--- a/sass/site/main.scss
+++ b/sass/site/main.scss
@@ -1,6 +1,7 @@
 // BASE
 
 @import "mixins";
+@import "../styleguide/core/functions";
 @import "../styleguide/core/settings";
 @import "fonts";
 @import "colors";
