--- a/sass/site/_footer.scss
+++ b/sass/site/_footer.scss
@@ -1,11 +1,10 @@
 .st-footer {
-    background-color: $socialbro;
-    color: $white;
+    background-color: color("socialbro");
+    color: white;
     font-size: 1.4rem;
     text-align: center;
     width: 100%;
     height: 60px;
-    // margin: -60px auto 0;
 }
 
 .st-footer > span {
