--- a/sass/site/_heading.scss
+++ b/sass/site/_heading.scss
@@ -1,5 +1,5 @@
 .st-h1, .st-h2, .st-h3, .st-h4, .st-h5, .st-h6 {
-    color: $socialbro;
+    color: color("socialbro");
     font-family: 'Open Sans';
     font-weight: bold;
 }
