--- a/sass/site/_home.scss
+++ b/sass/site/_home.scss
@@ -3,7 +3,7 @@
     font-family: 'Open Sans';
     font-size: 1.4rem;
     line-height: 1.6;
-    color: darken($socialbro, 30%);
+    color: color("socialbro", $variant: "secondary", $hue: "dark");
 }
 
 .st-task-list {
