Migrate error color family

--- a/sass/site/_home.scss
+++ b/sass/site/_home.scss
@@ -30,7 +30,7 @@
 
 .st-code {
     padding: 0.2rem 0.4rem;
-    color: $error;
+    color: color("error");
     background-color: $black-grounds;
     border-radius: 4px;
 }
