--- a/sass/site/_home.scss
+++ b/sass/site/_home.scss
@@ -31,7 +31,7 @@
 .st-code {
     padding: 0.2rem 0.4rem;
     color: color("error");
-    background-color: $black-grounds;
+    background-color: color("background", $hue: "dark");
     border-radius: 4px;
 }
 
