Delete white color from color variables

--- a/sass/styleguide/helpers/_avatar.scss
+++ b/sass/styleguide/helpers/_avatar.scss
@@ -11,7 +11,7 @@ Avatar helper to show rounded in a few sizes.
 
 %avatar {
     border-radius: 3px;
-    box-shadow: 0 0 0 1px $white;
+    box-shadow: 0 0 0 1px white;
 }
 
 .avatar-large {
