--- a/sass/styleguide/objects/_breadcrumb.scss
+++ b/sass/styleguide/objects/_breadcrumb.scss
@@ -9,7 +9,7 @@ Breadcrumb in two flavours: normal with arrow shapes and simple.
 
 .breadcrumb {
     @extend .clearfix;
-    background-color: $white;
+    background-color: white;
     border-radius: 3px;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
