--- a/sass/styleguide/objects/_tabs.scss
+++ b/sass/styleguide/objects/_tabs.scss
@@ -26,7 +26,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 /* By default, tabs component is full width */
 .sb-tabs-group {
     border-radius: 4px 4px 0 0;
-    box-shadow: 0 2px 4px $border;
+    box-shadow: 0 2px 4px color("border");
     display: table;
     list-style-type: none;
     margin: 0;
@@ -37,7 +37,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 
 .sb-tab {
     background-color: #f7f7f7;
-    border-top: 1px solid $border;
+    border-top: 1px solid color("border");
     display: table-cell;
     position: relative;
 
@@ -70,24 +70,24 @@ Navigation usually means list of links. And we have some flavours using distinct
 }
 
 .sb-tab:first-child {
-    border-left: 1px solid $border;
+    border-left: 1px solid color("border");
     border-top-left-radius: 4px;
 }
 
 .sb-tab:last-child {
-    border-right: 1px solid $border;
+    border-right: 1px solid color("border");
     border-top-right-radius: 4px;
 }
 
 .sb-tab + .sb-tab {
-    border-left: 1px solid $border;
+    border-left: 1px solid color("border");
 }
 
 .sb-tabs-content {
     background-color: #fff;
     border-radius: 0 0 4px 4px;
-    border: 1px solid $border;
-    box-shadow: 0 2px 4px $border;
+    border: 1px solid color("border");
+    box-shadow: 0 2px 4px color("border");
     padding: 1em;
     position: relative;
     z-index: 0;
@@ -101,7 +101,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 
 .sb-tabs--block-bottom .sb-tab {
     border-top: 0;
-    border-bottom: 1px solid $border;
+    border-bottom: 1px solid color("border");
 }
 .sb-tabs--block-bottom .sb-tab:first-child {
     border-top-left-radius: 0;
@@ -201,7 +201,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 }
 
 .sb-tabs--left .sb-tab {
-    border-left: 1px solid $border;
+    border-left: 1px solid color("border");
 }
 
 .sb-tabs--left .sb-tab:last-child {
@@ -210,7 +210,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 }
 
 .sb-tabs--left .sb-tab + .sb-tab {
-    border-top: 1px solid $border;
+    border-top: 1px solid color("border");
     border-right: 0;
 }
 
@@ -233,7 +233,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 }
 
 .sb-tabs--right .sb-tab {
-    border-right: 1px solid $border;
+    border-right: 1px solid color("border");
 }
 
 .sb-tabs--right .sb-tab-active:after {
