--- a/sass/styleguide/core/_settings.scss
+++ b/sass/styleguide/core/_settings.scss
@@ -36,7 +36,7 @@ $colors:
 $special-cases:
   "background"   "primary"   "dark"   #f2f2f2,
   "background"   "primary"   "light"  #ffffff,
-  "error"        "tertiary"  "dark"   #ddd5d5,
+  "error"        "tertiary"  "dark"   #ffd5d5,
   "socialbro"    "tertiary"  "light"  #DDF7F8,
   "text"         "primary"   "dark"   #565656,
   "text"         "primary"   "light"  #676767,
