Change name of color exceptions in scss settings

--- a/sass/styleguide/core/_settings.scss
+++ b/sass/styleguide/core/_settings.scss
@@ -33,7 +33,7 @@ $colors:
   "titles"       #191919 #8a4fa2;
 
 // Colors with hues out of the general rule
-$special-cases:
+$color-exceptions:
   "background"   "primary"   "dark"   #f2f2f2,
   "background"   "primary"   "light"  #ffffff,
   "error"        "tertiary"  "dark"   #ffd5d5,
