--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -69,6 +69,7 @@ This library is divided in the following sections:
 @import "objects/pagination";
 @import "objects/breadcrumb";
 @import "objects/dropdown-toggler";
+@import "objects/grid-panel";
 
 /* 6. Layout */
 
