--- a/views/components.html
+++ b/views/components.html
@@ -3,13 +3,18 @@
 {% block content_left %}
 <ul class="st-content-left">
   <li class="st-content-left-item"><a class="st-a bold" href="#pagination">Pagination</a></li>
+
   <li class="st-content-left-item"><a class="st-a bold" href="#tabs">Tabs</a></li>
   <li class="st-content-left-item"><a class="st-a" href="#tabs-block-bottom">Tabs block bottom</a></li>
   <li class="st-content-left-item"><a class="st-a" href="#tabs-block-left">Tabs block on left</a></li>
   <li class="st-content-left-item"><a class="st-a" href="#tabs-block-right">Tabs block on right</a></li>
+
   <li class="st-content-left-item"><a class="st-a bold" href="#breadcrumb">Breadcrumb</a></li>
   <li class="st-content-left-item"><a class="st-a" href="#breadcrumb-normal">Breadcrumb normal</a></li>
   <li class="st-content-left-item"><a class="st-a" href="#breadcrumb-dashboard">Breadcrumb dashboard</a></li>
+
+  <li class="st-content-left-item"><a class="st-a bold" href="#grid-panel">Grid panel</a></li>
+  <li class="st-content-left-item"><a class="st-a" href="#grid-panel-default">Default</a></li>
 </ul>
 
 {% endblock %}
@@ -78,6 +83,21 @@
         {% include "components/breadcrumb/dashboard.html" %}
     </div>
     <pre><code class="language-markup">{% include "components/breadcrumb/dashboard.html" %}</code></pre>
+</div>
+
+<div class="st-content-pills" id="grid-panel">
+  <h2 class="st-h2">Grid panel</h2>
+  <p class="st-p">
+    Grid panels serve as containers for data displayed on grids like dashboards.
+  </p>
+
+  <div class="st-container-component" id="default">
+    <h4 class="st-h4">Default</h4>
+    <div class="grid">
+      {% include "components/grid-panel/default.html" %}
+    </div>
+  </div>
+  <pre><code class="language-markup">{% include "components/grid-panel/default.html" %}</code></pre>
 </div>
 {% endblock %}
 
