Fix anchor for default grid panel link

--- a/views/components.html
+++ b/views/components.html
@@ -91,7 +91,7 @@
     Grid panels serve as containers for data displayed on grids like dashboards.
   </p>
 
-  <div class="st-container-component" id="default">
+  <div class="st-container-component" id="grid-panel-default">
     <h4 class="st-h4">Default</h4>
     <div class="grid">
       {% include "components/grid-panel/default.html" %}
