--- a/sass/styleguide/base/_global.scss
+++ b/sass/styleguide/base/_global.scss
@@ -7,9 +7,11 @@ General fonts and other global styles of the page.
 
 */
 
-* {
+*, :before, :after {
     outline-width: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
 }
 
 html {
