Add documented format for ROI component

--- a/views/components.html
+++ b/views/components.html
@@ -260,6 +260,59 @@
 </code></pre>
 </div>
 
+<div class="st-content-pills" id="roi">
+    <h2 class="st-h2">Return of investment</h2>
+    <p class="st-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed perferendis dignissimos laudantium, quae vel commodi. Aperiam animi laudantium provident hic quia incidunt rem doloribus vitae, tempore libero. Provident, tempore, ab!</p>
+
+    <div class="st-container-component clearfix">
+        <h4 class="st-h4">Return of Investment component</h4>
+
+        <ul class="roi">
+          <li class="roi-item-wrapper">
+            <div class="roi-item">
+              <div class="roi-item-event">
+                <div class="roi-item-event-wrapper">
+                  <span class="roi-item-event-amount">30</span>
+                  <span class="roi-item-event-action">Retweets</span>
+                </div>
+              </div>
+              <span class="roi-item-amount">$0.10/unit</span>
+            </div>
+            <div class="roi-item-back-top"></div>
+            <div class="roi-item-back-bottom"></div>
+          </li>
+
+          <li class="roi-item-wrapper">
+            <div class="roi-item">
+              <div class="roi-item-event">
+                <div class="roi-item-event-wrapper">
+                  <span class="roi-item-event-amount">10</span>
+                  <span class="roi-item-event-action">Followers</span>
+                </div>
+              </div>
+              <span class="roi-item-amount">$0.10/unit</span>
+            </div>
+            <div class="roi-item-back-top"></div>
+            <div class="roi-item-back-bottom"></div>
+          </li>
+
+          <li class="roi-item-wrapper">
+            <div class="roi-item">
+              <div class="roi-item-total">
+                <div class="roi-item-total-wrapper">
+                  <div class="roi-item-total-amount">
+                    <span>$7.80</span>
+                    <span class="roi-item-total-unit">Roi</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="roi-item-back-top"></div>
+            <div class="roi-item-back-bottom"></div>
+          </li>
+        </ul>
+    </div>
+<pre><code class="language-markup">
   <ul class="roi">
     <li class="roi-item-wrapper">
       <div class="roi-item">
@@ -304,5 +357,7 @@
       <div class="roi-item-back-bottom"></div>
     </li>
   </ul>
+</code></pre>
+</div>
 
 {% endblock %}
