--- a/views/components/charts/pie/pie.html
+++ b/views/components/charts/pie/pie.html
@@ -1,4 +1,4 @@
 <div id="pie-container" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
 <script>
-  {% include "components/charts/pie.js" %}
+  {% include "components/charts/pie/pie.js" %}
 </script>
