--- a/sass/docs/_markdown.scss
+++ b/sass/docs/_markdown.scss
@@ -1,4 +1,4 @@
-.markdown-content ul {
+.markdown-content > ul {
     font-size: 1.6rem;
     line-height: 1.6;
     list-style: initial;
@@ -20,6 +20,16 @@
 .markdown-content > h2 {
     margin-bottom: 1.5rem;
     padding-bottom: .2rem;
+}
+
+.markdown-content pre {
+    border-radius: 0 0 .5rem .5rem;
+    border: 1px solid #e5e5e5;
+    margin-top: -1px;
+}
+
+.markdown-content pre > code {
+    padding: 1.5rem 1.5rem 0 1.5rem;
 }
 
 .markdown-content code {
