--- a/sass/docs/_layout.scss
+++ b/sass/docs/_layout.scss
@@ -5,3 +5,10 @@
     padding-right: 2rem;
     width: auto;
 }
+
+.docs-sample {
+    border-radius: .5rem .5rem 0 0;
+    border: 1px solid #e5e5e5;
+    padding: 1.5rem;
+    position: relative;
+}
