Migrate colors page

--- a/sass/docs/docs.scss
+++ b/sass/docs/docs.scss
@@ -5,3 +5,7 @@
 @import "layout";
 @import "header";
 @import "markdown";
+@import "menu";
+
+// Specific documentation pages
+@import "color-palette";
