--- a/views/docs.html
+++ b/views/docs.html
@@ -6,6 +6,6 @@
 
 {% block main %}
   <div class="three-quarters column markdown-content">
-    {% markdown "markdown/colors.md" %}
+    {% markdown "markdown/" + section + ".md" %}
   </div>
 {% endblock %}
