--- a/sass/docs/_layout.scss
+++ b/sass/docs/_layout.scss
@@ -9,6 +9,7 @@
 .docs-sample {
     border-radius: .5rem .5rem 0 0;
     border: 1px solid #e5e5e5;
+    font-size: 1.4rem;
     padding: 1.5rem;
     position: relative;
 }
