--- a/sass/styleguide/base/_headings.scss
+++ b/sass/styleguide/base/_headings.scss
@@ -18,11 +18,24 @@ h1 {
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: bold;
 }
 
 h3 {
     font-size: 2rem;
-    font-weight: normal;
+    font-weight: bold;
+}
+
+h4 {
+    font-size: 1.6rem;
+}
+
+h5 {
+    font-size: 1.3rem;
+}
+
+h6 {
+    font-size: 1.3rem;
+    color: color("text", $hue: "light");
 }
