--- a/sass/styleguide/objects/_breadcrumb.scss
+++ b/sass/styleguide/objects/_breadcrumb.scss
@@ -10,8 +10,8 @@ Breadcrumb in two flavours: normal with arrow shapes and simple.
 .breadcrumb {
     @extend .clearfix;
     background-color: white;
-    border-radius: 3px;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    border: 1px solid color($name: "text", $variant: "secondary", $hue: "light");
     overflow: hidden;
 }
 
