--- a/sass/styleguide/objects/_grid-panel.scss
+++ b/sass/styleguide/objects/_grid-panel.scss
@@ -8,15 +8,15 @@
 }
 
 .grid-panel-header {
-    padding: 12px 15px;
-    font-size: 12px;
+    padding: 1.2rem 1.5rem;
+    font-size: 1.2rem;
     background-color: #F6F6F6;
 
     h1 {
-        font-size: 14px;
+        font-size: 1.4rem;
     }
 }
 
 .grid-panel-body {
-    padding: 10px 15px;
+    padding: 1rem 1.5rem;
 }
