Add tables component

--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -66,6 +66,7 @@ This library is divided in the following sections:
 @import "objects/media";
 @import "objects/justify-columns";
 @import "objects/tabs";
+@import "objects/tables";
 @import "objects/pagination";
 @import "objects/breadcrumb";
 @import "objects/dropdown-toggler";
