--- a/sass/docs/_landing.scss
+++ b/sass/docs/_landing.scss
@@ -45,6 +45,8 @@
     padding: 0.8rem 1.5rem;
 
     &:hover {
+        background-color: white;
+        color: color("text");
         text-decoration: none;
     }
 }
