--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -69,7 +69,7 @@ This library is divided in the following sections:
 @import "objects/pagination";
 @import "objects/breadcrumb";
 @import "objects/dropdown-toggler";
-@import "objects/roi";
+@import "objects/acc-breadcrumb";
 
 /* 6. Layout */
 
