--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -64,6 +64,7 @@ This library is divided in the following sections:
 @import "objects/buttons";
 @import "objects/icons";
 @import "objects/media";
+@import "objects/forms";
 @import "objects/justify-columns";
 @import "objects/tabs";
 @import "objects/tables";
