--- a/sass/docs/_icons.scss
+++ b/sass/docs/_icons.scss
@@ -1,3 +1,5 @@
+$icon-label-height: 2.8rem;
+
 .icons-holder {
     display: flex;
     flex-wrap: wrap;
@@ -5,17 +7,31 @@
 }
 
 .icon-container {
-    border-radius: 8px;
+    border-radius: 4px 4px 0 0;
+    border: 1px solid color($name: "border", $variant: "secondary");
     flex-shrink: 1;
-    height: 10rem;
-    margin: 1rem;
+    height: 12.5rem;
+    margin: 1rem 1rem (1rem + $icon-label-height) 1rem;
+    padding: 2rem;
+    position: relative;
     text-align: center;
-    width: 10rem;
+    width: 12.5rem;
+}
 
-    .st-icon {
-        fill: white;
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-    }
+.icon-container-name {
+    background-color: color($name: "background");
+    border-radius: 0 0 4px 4px;
+    border: 1px solid color($name: "border", $variant: "secondary");
+    bottom: -$icon-label-height;
+    color: color($name: "text", $hue: "light");
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-size: 1.2rem;
+    font-weight: bold;
+    height: $icon-label-height;
+    left: -1px;
+    line-height: $icon-label-height;
+    overflow-x: scroll;
+    position: absolute;
+    right: -1px;
+    text-align: center;
 }
