--- a/sass/styleguide/core/_colors.scss
+++ b/sass/styleguide/core/_colors.scss
@@ -9,7 +9,8 @@ $colors:
   "socialbro"    #29c4d0 #41787c #c1eff3,
   "succeed"      #72c427 #9fb87d #e1f6de,
   "text"         #5e5e5e #b9b9b9,
-  "titles"       #191919 #8a4fa2;
+  "titles"       #191919 #8a4fa2,
+  "twitter"      #55acee;
 
 // Colors with hues out of the general rule
 $color-exceptions:
