--- a/sass/styleguide/objects/_icons.scss
+++ b/sass/styleguide/objects/_icons.scss
@@ -1,30 +1,23 @@
-/*
+$base-sizes:  20 30 35 40 45 50 55 60;
 
-Icons
------
-
-Icons classes built on sprites or svg. Use the i tag as acronym of icon. Hilarious!
-
-    <i class="icon-arrow-left"></i>
-
-*/
+@each $size in $base-sizes {
+    .icon-size-#{$size} {
+        height: pixel-to-rem($size) * 1rem;
+        width: pixel-to-rem($size) * 1rem;
+    }
+}
 
 [class^="icon"] {
-    @include text-replacement;
+    @extend .icon-4;
+    fill: currentColor;
     display: inline-block;
+    vertical-align: middle;
 }
 
-.icon-small {
-    height: 18px;
-    width: 18px;
+.icon-twitter {
+    fill: color($name: "twitter");
 }
 
-.icon-medium {
-    height: 32px;
-    width: 32px;
-}
-
-.icon-large {
-    height: 48px;
-    width: 48px;
+.icon-socialbro {
+    fill: color($name: "socialbro");
 }
