--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -2,7 +2,7 @@
   <div class="container clearfix">
     <a class="header-logo" href="/">
       <svg viewBox="0 0 100 100" class="header-logo-icon">
-        <use xlink:href="#icon-socialbro"></use>
+        <use xlink:href="/svg-defs.svg#icon-socialbro"></use>
       </svg>
       <span class="header-logo-text">haiku</span>
     </a>
