--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -1,242 +1,29 @@
 <div class="icons-holder clearfix">
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-banknote"></use>
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-socialbro">
+      <use xlink:href="/svg-defs.svg#icon-socialbro"></use>
     </svg>
+    <span class="icon-container-name">socialbro</span>
   </div>
-  <div class="icon-container color-error-primary-dark">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-bubble"></use>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-twitter">
+      <use xlink:href="/svg-defs.svg#icon-twitter"></use>
     </svg>
+    <span class="icon-container-name">twitter</span>
   </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-bulb"></use>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-triangle-down">
+      <use xlink:href="/svg-defs.svg#icon-triangle-down"></use>
     </svg>
+    <span class="icon-container-name">triangle-down</span>
   </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-calendar"></use>
+
+  <div class="icon-container">
+    <svg viewBox="0 0 100 100" class="icon-trash">
+      <use xlink:href="/svg-defs.svg#icon-trash"></use>
     </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-camera"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-clip"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-clock"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-cloud"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-cup"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-data"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-diamond"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-display"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-eye"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-fire"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-food"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-heart"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-key"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-lab"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-like"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-location"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-lock"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-mail"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-megaphone"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-music"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-news"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-note"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-paperplane"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-params"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-pen"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-phone"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-photo"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-search"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-settings"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-shop"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-sound"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-stack"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-star"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-study"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-t-shirt"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-tag"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-trash"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-truck"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-tv"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-succeed-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-user"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-primary-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-video"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-socialbro-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-vynil"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-error-primary-regular">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-wallet"></use>
-    </svg>
-  </div>
-  <div class="icon-container color-service-primary-light">
-    <svg viewBox="0 0 100 100" class="icon-large st-icon">
-      <use xlink:href="#icon-world"></use>
-    </svg>
+    <span class="icon-container-name">trash</span>
   </div>
 </div>
