Update svg icons in landing

--- a/views/landing.html
+++ b/views/landing.html
@@ -4,7 +4,7 @@
   <section class="landing-cover">
     <div class="landing-wrapper">
       <svg viewBox="0 0 100 100" class="landing-logo">
-        <use xlink:href="#icon-socialbro"></use>
+        <use xlink:href="/svg-defs.svg#icon-socialbro"></use>
       </svg>
       <h1 class="landing-cover-title">haiku.</h1>
       <h2 class="landing-cover-subtitle">A styleguide to rule Socialbro Components.</h2>
