Add 18px size helper for icons

--- a/sass/styleguide/objects/_icons.scss
+++ b/sass/styleguide/objects/_icons.scss
@@ -1,4 +1,4 @@
-$base-sizes:  20 30 35 40 45 50 55 60;
+$base-sizes:  18 20 30 35 40 45 50 55 60;
 
 @each $size in $base-sizes {
     .icon-size-#{$size} {
