--- a/public/stylesheets/sandbox.css
+++ b/public/stylesheets/sandbox.css
@@ -155,7 +155,325 @@ Web fonts
 Drop the files in a folder, update the path and the name and go.
 
 */
+/*
+
+Headings
+--------
+
+h1, h2, h3, h4, h5, h6 headings styles.
+
+*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6
+{
+    margin: 0;
+    padding: 0;
+}
+
+h1
+{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+h2
+{
+    font-size: 25px;
+    font-weight: bold;
+}
+
+h3
+{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+h4
+{
+    font-size: 16px;
+}
+
+h5
+{
+    font-size: 13px;
+}
+
+h6
+{
+    font-size: 13px;
+    color: #676767;
+}
+
 /* 5. Objects */
+.btn
+{
+    line-height: 24px;
+    display: inline-block;
+    overflow: hidden;
+    height: 36px;
+    padding: 6px 10px;
+    cursor: pointer;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap; 
+    text-decoration: none;
+    text-overflow: ellipsis;
+    color: #565656;
+    border: 1px solid #d6d6d6;
+    border-radius: 3px;
+    background-color: #f6f6f6;
+}
+.btn:hover
+{
+    background-color: #fff;
+}
+.btn:active,
+.btn.active
+{
+    background: #d6d6d6;
+}
+.btn:disabled,
+.btn.disabled
+{
+    cursor: not-allowed;
+    opacity: .5;
+}
+
+.btn-primary
+{
+    color: white; 
+    border: 1px solid #f18b46;
+    background: #f29556;
+}
+.btn-primary:hover
+{
+    background: #f39f66;
+}
+.btn-primary:active,
+.btn-primary.active
+{
+    background: #f18b46;
+}
+
+.btn-success
+{
+    color: white; 
+    border: 1px solid #6ab624;
+    background: #72c427;
+}
+.btn-success:hover
+{
+    background: #7ad22a;
+}
+.btn-success:active,
+.btn-success.active
+{
+    background: #6ab624;
+}
+
+.btn-service
+{
+    color: white; 
+    border: 1px solid #009ee1;
+    background: #00aaf2;
+}
+.btn-service:hover
+{
+    background: #04b4ff;
+}
+.btn-service:active,
+.btn-service.active
+{
+    background: #009ee1;
+}
+
+.btn-danger
+{
+    color: white; 
+    border: 1px solid #c60e32;
+    background: #d60f36;
+}
+.btn-danger:hover
+{
+    background: #e6103a;
+}
+.btn-danger:active,
+.btn-danger.active
+{
+    background: #c60e32;
+}
+
+.btn-contrast
+{
+    color: inherit; 
+    border: 1px solid #ccd1d9;
+    background: #fff;
+}
+.btn-contrast:hover
+{
+    background: #f6f6f6;
+}
+.btn-contrast:active,
+.btn-contrast.active
+{
+    background: #ccd1d9;
+}
+
+.btn-skip
+{
+    color: white; 
+    border: 1px solid #acacac;
+    background: #b9b9b9;
+}
+.btn-skip:hover
+{
+    background: #c6c6c6;
+}
+.btn-skip:active,
+.btn-skip.active
+{
+    background: #acacac;
+}
+
+.icon-size-18
+{
+    width: 18px; 
+    height: 18px;
+}
+
+.icon-size-20
+{
+    width: 20px; 
+    height: 20px;
+}
+
+.icon-size-30
+{
+    width: 30px; 
+    height: 30px;
+}
+
+.icon-size-35
+{
+    width: 35px; 
+    height: 35px;
+}
+
+.icon-size-40
+{
+    width: 40px; 
+    height: 40px;
+}
+
+.icon-size-45
+{
+    width: 45px; 
+    height: 45px;
+}
+
+.icon-size-50
+{
+    width: 50px; 
+    height: 50px;
+}
+
+.icon-size-55
+{
+    width: 55px; 
+    height: 55px;
+}
+
+.icon-size-60
+{
+    width: 60px; 
+    height: 60px;
+}
+
+[class^='icon']
+{
+    display: inline-block;
+    vertical-align: middle; 
+
+    fill: currentColor;
+}
+
+.icon-twitter
+{
+    fill: #55acee;
+}
+
+.icon-socialbro
+{
+    fill: #29c4d0;
+}
+
+.input-text
+{
+    font-size: 14px;
+    line-height: 24px;
+    display: inline-block;
+    width: 200px; 
+    height: 36px;
+    padding: 6px 10px;
+    vertical-align: middle;
+    color: #565656;
+    border: 1px solid #d6d6d6;
+    border-radius: 3px;
+    background-color: #fff;
+}
+
+.input-group
+{
+    display: inline-table;
+    overflow: hidden;
+    width: 200px; 
+    border-collapse: separate;
+    border-width: 0;
+}
+.input-group .input-label + .input-text
+{
+    border-width: 1px 1px 1px 0;
+    border-radius: 0 3px 3px 0;
+}
+.input-group .input-text
+{
+    display: table-cell;
+    width: 100%; 
+    height: 36px;
+    padding: 6px 10px;
+    border-width: 1px 0 1px 1px;
+    border-radius: 3px 0 0 3px;
+}
+.input-group .input-group-button
+{
+    display: table-cell;
+    height: 36px;
+    vertical-align: middle;
+}
+.input-group .input-group-button > .btn
+{
+    width: 100%; 
+    height: 36px;
+    border-radius: 0 3px 3px 0;
+}
+.input-group .input-label
+{
+    font-weight: bold;
+    line-height: 24px;
+    display: table-cell;
+    height: 34px;
+    padding: 5px 10px;
+    vertical-align: middle; 
+    color: #565656;
+    border: 1px solid #d6d6d6;
+    border-radius: 3px 0 0 3px;
+    background: #f6f6f6;
+}
+
 .table
 {
     display: table;
@@ -757,6 +1075,32 @@ Breadcrumb in two flavours: normal with arrow shapes and simple.
 {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+}
+
+.grid-panel
+{
+    display: inline-block;
+    overflow: hidden;
+    box-sizing: border-box;
+    color: #444;
+    border: 1px solid #f6f6f6;
+    background-color: #fff;
+}
+
+.grid-panel-header
+{
+    font-size: 12px;
+    padding: 12px 15px;
+    background-color: #f6f6f6;
+}
+.grid-panel-header h1
+{
+    font-size: 14px;
+}
+
+.grid-panel-body
+{
+    padding: 10px 15px;
 }
 
 /* 6. Layout */
