Add a mixin to disable browser appereance

--- a/sass/styleguide/core/_mixins.scss
+++ b/sass/styleguide/core/_mixins.scss
@@ -35,6 +35,27 @@ Forbidden cursor
 
 /*
 
+Disable appearance
+----------------
+
+  div.neutral {
+    @include disable-appearance;
+  }
+
+*/
+
+@mixin disable-appearance {
+    appearance:         none;
+    -moz-appearance:    none;
+    -webkit-appearance: none;
+    background-color: transparent;
+    border: 0;
+    outline: 0;
+}
+
+
+/*
+
 Center-align a block level element
 ----------------------------------
 
