Bugfix: Vertically align properly buttons text

--- a/sass/styleguide/objects/_buttons.scss
+++ b/sass/styleguide/objects/_buttons.scss
@@ -7,12 +7,12 @@ $btn-base-v-padding:   ($btn-base-height - $btn-base-line-height)/2;
 .btn {
     background-color: color($name: "background");
     border-radius: 3px;
-    border: 1px solid color($name: "border", $variant: "secondary");
+    border: .1rem solid color($name: "border", $variant: "secondary");
     color: color($name: "text", $hue: "dark");
     cursor: pointer;
     display: inline-block;
     height: $btn-base-height;
-    line-height: $btn-base-line-height;
+    line-height: $btn-base-line-height - .2rem;
     overflow: hidden;
     padding: $btn-base-v-padding $btn-base-h-padding;
     text-align: center;
