--- a/views/components/forms/input-groups.html
+++ b/views/components/forms/input-groups.html
@@ -1,10 +1,10 @@
 <div class="input-group">
   <label class="input-label" for="">$</label>
-  <input class="input-text" type="text" placeholder="Enter an amount"/>
+  <input class="input-base" type="text" placeholder="Enter an amount"/>
 </div>
 
 <div class="input-group">
-  <input class="input-text" type="text" placeholder="Message"/>
+  <input class="input-base" type="text" placeholder="Message"/>
   <span class="input-group-button">
     <button class="btn">Send</button>
   </span>
