Refactor panel container

--- a/views/components/containers/panel.html
+++ b/views/components/containers/panel.html
@@ -1,8 +1,8 @@
-<div class="grid-panel">
-  <header class="grid-panel-header">
-    <h1>Panel title</h1>
+<div class="panel">
+  <header class="panel-header">
+    <h1 class="panel-header-title">Panel title</h1>
   </header>
-  <div class="grid-panel-body">
+  <div class="panel-body">
     <p>Some text about Light sit amet, consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur. Sexy sexy  consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq. Tabs , consectetur adipisicing elit. Pariatur modi quod quo iure recusandae eligendi q.t, consectetur adipisicing elit. Pariatur modi quod quo iureq.</p>
   </div>
 </div>
