--- a/public/stylesheets/sandbox.css
+++ b/public/stylesheets/sandbox.css
@@ -62,6 +62,16 @@ Forbidden cursor
 */
 /*
 
+Disable appearance
+----------------
+
+  div.neutral {
+    @include disable-appearance;
+  }
+
+*/
+/*
+
 Center-align a block level element
 ----------------------------------
 
@@ -211,7 +221,7 @@ h6
 /* 5. Objects */
 .btn
 {
-    line-height: 24px;
+    line-height: 22px;
     display: inline-block;
     overflow: hidden;
     height: 36px;
@@ -411,19 +421,76 @@ h6
     fill: #29c4d0;
 }
 
-.input-text
+.input-base
 {
     font-size: 14px;
-    line-height: 24px;
+    line-height: 22px;
+    position: relative;
     display: inline-block;
     width: 200px; 
     height: 36px;
     padding: 6px 10px;
+    text-align: left;
     vertical-align: middle;
     color: #565656;
     border: 1px solid #d6d6d6;
     border-radius: 3px;
     background-color: #fff;
+}
+.input-base:focus
+{
+    border-color: #29c4d0;
+}
+.input-base.error
+{
+    color: #cc8383; 
+    border-color: #cc8383;
+    background-color: #ffe6e6;
+}
+.input-base.with-caret
+{
+    cursor: pointer;
+}
+.input-base.with-caret:after
+{
+    position: absolute;
+    z-index: 1; 
+    top: 50%;
+    right: 15px;
+    width: 0;
+    height: 0;
+    content: '';
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    pointer-events: none;
+    border-top: 5px solid #555;
+    border-right: 5px solid transparent;
+    border-left: 5px solid transparent;
+}
+.input-base > select
+{
+    position: absolute;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+    padding: 6px 10px;
+    cursor: pointer;
+    border: 0;
+    outline: 0;
+    background-color: transparent;
+
+            appearance: none;
+       -moz-appearance: none;
+    -webkit-appearance: none;
+}
+.input-base > select:-moz-focusring
+{
+    color: transparent;
+    text-shadow: 0 0 0 #000;
 }
 
 .input-group
@@ -434,12 +501,12 @@ h6
     border-collapse: separate;
     border-width: 0;
 }
-.input-group .input-label + .input-text
+.input-group .input-label + .input-base
 {
     border-width: 1px 1px 1px 0;
     border-radius: 0 3px 3px 0;
 }
-.input-group .input-text
+.input-group .input-base
 {
     display: table-cell;
     width: 100%; 
@@ -463,11 +530,13 @@ h6
 .input-group .input-label
 {
     font-weight: bold;
-    line-height: 24px;
+    line-height: 22px;
     display: table-cell;
     height: 34px;
     padding: 5px 10px;
-    vertical-align: middle; 
+    cursor: default;
+    vertical-align: middle;
+    white-space: nowrap; 
     color: #565656;
     border: 1px solid #d6d6d6;
     border-radius: 3px 0 0 3px;
@@ -1077,28 +1146,29 @@ Breadcrumb in two flavours: normal with arrow shapes and simple.
     border-bottom-right-radius: 4px;
 }
 
-.grid-panel
+.panel
 {
     display: inline-block;
-    overflow: hidden;
-    box-sizing: border-box;
-    color: #444;
-    border: 1px solid #f6f6f6;
+    overflow: hidden; 
+    border: 1px solid #d6d6d6;
+    border-radius: 3px;
     background-color: #fff;
 }
 
-.grid-panel-header
+.panel-header
 {
-    font-size: 12px;
-    padding: 12px 15px;
+    padding: 12px 15px; 
     background-color: #f6f6f6;
 }
-.grid-panel-header h1
+
+.panel-header-title
 {
-    font-size: 14px;
+    font-size: 18px;
+    font-weight: normal; 
+    color: #000;
 }
 
-.grid-panel-body
+.panel-body
 {
     padding: 10px 15px;
 }
